testdata/baselines/reference/submodule/compiler/regularExpressionCharacterClassRangeOrder.errors.txt
regularExpressionCharacterClassRangeOrder.ts(9,9): error TS1517: Range out of order in character class.
regularExpressionCharacterClassRangeOrder.ts(11,4): error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
regularExpressionCharacterClassRangeOrder.ts(11,14): error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
regularExpressionCharacterClassRangeOrder.ts(11,25): error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
regularExpressionCharacterClassRangeOrder.ts(11,35): error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
regularExpressionCharacterClassRangeOrder.ts(13,25): error TS1517: Range out of order in character class.


==== regularExpressionCharacterClassRangeOrder.ts (6 errors) ====
    // The characters in the following regular expressions are ASCII-lookalike characters found in Unicode, including:
    // - ğ˜ˆ (U+1D608 Mathematical Sans-Serif Italic Capital A)
    // - ğ˜¡ (U+1D621 Mathematical Sans-Serif Italic Capital Z)
    //
    // See https://en.wikipedia.org/wiki/Mathematical_Alphanumeric_Symbols
    const regexes: RegExp[] = [
    	/[ğ˜ˆ-ğ˜¡][ğ˜¡-ğ˜ˆ]/,
    	/[ğ˜ˆ-ğ˜¡][ğ˜¡-ğ˜ˆ]/u,
    	/[ğ˜ˆ-ğ˜¡][ğ˜¡-ğ˜ˆ]/v,
    	       ~~~
!!! error TS1517: Range out of order in character class.
    
    	/[\u{1D608}-\u{1D621}][\u{1D621}-\u{1D608}]/,
    	  ~~~~~~~~~
!!! error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
    	            ~~~~~~~~~
!!! error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
    	                       ~~~~~~~~~
!!! error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
    	                                 ~~~~~~~~~
!!! error TS1538: Unicode escape sequences are only available when the Unicode (u) flag or the Unicode Sets (v) flag is set.
    	/[\u{1D608}-\u{1D621}][\u{1D621}-\u{1D608}]/u,
    	/[\u{1D608}-\u{1D621}][\u{1D621}-\u{1D608}]/v,
    	                       ~~~~~~~~~~~~~~~~~~~
!!! error TS1517: Range out of order in character class.
    
    	/[\uD835\uDE08-\uD835\uDE21][\uD835\uDE21-\uD835\uDE08]/,
    	/[\uD835\uDE08-\uD835\uDE21][\uD835\uDE21-\uD835\uDE08]/u,
    	/[\uD835\uDE08-\uD835\uDE21][\uD835\uDE21-\uD835\uDE08]/v,
    ];
    